# ticcam-idf

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig.template
components/: lv_conf.h
components/Crypto/: CMakeLists.txt
components/M5Core2/: CMakeLists.txt
components/M5Core2/src/: M5Core2.cpp
components/M5Core2/src/utility/: Config.h  In_eSPI.h  In_eSPI_Setup.h
components/SdFat-2.2.2/: CMakeLists.txt
components/SdFat-2.2.2/src/: SdFatConfig.h
components/SdFat-2.2.2/src/SpiDriver/: SdSpiDriver.h
components/cJSON/: CMakeLists.txt
components/lvgl/: .config  .config.old  CMakeLists.txt
components/lvgl/env_support/cmake/: custom.cmake  esp.cmake
components/lvgl/scripts/built_in_font/: FontAwesome5Free-Solid.sfd  FontAwesome5Free-Solid_rexport.sfd  built_in_font_gen.py
components/lvgl/src/font/: lv_font_dejavu_16_persian_hebrew.c  lv_font_montserrat_10.c  lv_font_montserrat_12.c  lv_font_montserrat_12_subpx.c  lv_font_montserrat_14.c  lv_font_montserrat_16.c  lv_font_montserrat_18.c  lv_font_montserrat_20.c  lv_font_montserrat_22.c  lv_font_montserrat_24.c  lv_font_montserrat_26.c  lv_font_montserrat_28.c  lv_font_montserrat_28_compressed.c  lv_font_montserrat_30.c  lv_font_montserrat_32.c  lv_font_montserrat_34.c  lv_font_montserrat_36.c  (+11 more)
main/: AD5686.cpp  AD5686.h  ADS1100.cpp  ADS1100.h  BMP.h  CMakeLists.txt  DMABuffer.h  Kconfig.projbuild  MCP466_DigitalPot.cpp  MCP466_DigitalPot.h  TicWaveLogo6_98x30.c  TicWaveLogo6_98x30_g.c  TicWaveLogo6_98x30_w.c  XClk.cpp  app_httpd.cpp  cam_filter.cpp  cam_filter.h  camera_index.h  camera_index.h.compressed  camera_index.h.full  camera_index_id02.h  camera_index_id03.h  colormap.cpp  colormap.h  convert_camera_index.py  global_var.cpp  global_var.h  idf_component.yml  main.cpp  main.h  sdkconfig.h  tw_class.cpp  tw_class.h
tools/: CAMctrl.bat  CAMctrl.py  installer.iss  license.txt  modpath.iss  requirements.txt  video.m
tools/USBstick/: README.md
